--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -327,9 +327,40 @@
                     android:text="@string/menu_label_credits"
                     android:textColor="@color/white"
                     android:textSize="36px"/>
-\
+
 
             </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/vehiclesDetailRL"
+                android:layout_width="match_parent"
+                android:layout_height="84px"
+                android:visibility="@integer/show_refer_earn"
+                android:background="@drawable/background_tranparend_red_v2_selector"
+                android:splitMotionEvents="false">
+
+                <ImageView
+                    android:id="@+id/imageViewVehicles"
+                    android:layout_width="56px"
+                    android:layout_height="38px"
+                    android:layout_marginStart="20px"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_auto_request"
+                    android:tag="mwar"/>
+
+                <TextView
+                    android:id="@+id/tvVehicles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/imageViewVehicles"
+                    android:layout_marginStart="8px"
+                    android:text="@string/your_vehicles"
+                    android:textColor="@color/white"
+                    android:textSize="36px"/>
+
+
+            </RelativeLayout>
+
             <RelativeLayout
                 android:id="@+id/manaulRequestRl"
                 android:layout_width="match_parent"
