--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -403,7 +403,7 @@
                     android:layout_height="38px"
                     android:layout_marginStart="20px"
                     android:layout_marginTop="5px"
-                    android:src="@drawable/icon_cash_xxx"
+                    android:src="@drawable/ic_plan"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
