--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_vehicle_model.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_vehicle_model.xml
@@ -247,7 +247,7 @@
         <android.support.constraint.Group
             android:id="@+id/vehicleDetailsGroup"
             android:visibility="gone"
-            app:constraint_referenced_ids="labelYear,edtYear,labelDoor,edtDoor,labelColor,edtColor,labelSeatBelts,edtSeatBelt,labelVehicleNumber,edtVehicleNumber"
+            app:constraint_referenced_ids="labelYear,edtYear,labelDoor,edtDoor,labelColor,edtColor,labelSeatBelts,edtSeatBelt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
