--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -112,7 +112,7 @@
                     android:layout_marginTop="15dp"
                     android:gravity="center"
                     android:lineSpacingExtra="5dp"
-                    android:text="Share your referral code 12345678"
+                    tools:text="Share your referral code 12345678"
                     style="@style/TextNormal"
                     />
 
