f_whatsapp_share: fit center referral image

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -33,7 +33,7 @@
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/graphic_refer"
                     android:visibility="visible"
-                    android:scaleType="centerInside"
+                    android:scaleType="fitCenter"
                     />
 
                 <LinearLayout
