--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -123,6 +123,7 @@
                     android:lineSpacingExtra="5dp"
                     tools:text="Share your referral code 12345678"
                     style="@style/TextNormal"
+                    android:textSize="18sp"
                     />
 
             </LinearLayout>
