--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
@@ -27,12 +27,11 @@
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/title"
             style="@style/TextTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="38dp"
-            android:layout_toEndOf="@+id/backBtn"
+            android:layout_toEndOf="@id/backBtn"
+            android:layout_toStartOf="@id/ivAddDestRide"
             android:gravity="center"
             android:maxHeight="45dp"
             android:textAllCaps="true"
