--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
@@ -11,6 +11,7 @@
     app:cardElevation="7dp">
 
     <RelativeLayout
+        android:id="@+id/border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
@@ -55,7 +56,7 @@
             android:gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toEndOf="@id/profileRl"
             android:layout_toStartOf="@id/ivDelete"
