--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -116,11 +116,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_margin="10dp"
                     android:gravity="center"
-                    android:lineSpacingExtra="5dp"
+                    android:lineSpacingExtra="3dp"
                     tools:text="Share your referral code 12345678"
                     style="@style/TextNormal"
                     android:textSize="18sp"
