--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_incentive.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_incentive.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,7 @@
 
     <include layout="@layout/layout_top_bar" />
 
-   <android.support.v7.widget.RecyclerView
+   <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPrograms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -20,4 +20,4 @@
         app:layout_constraintTop_toBottomOf="@+id/topRl"
         android:orientation="vertical"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
