document uploading bug removed, dialog added before removng vehicle, other bugs removed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
@@ -66,6 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:paddingBottom="30dp"
+        tools:listitem="@layout/content_vehicle_details"
+        tools:itemCount="4"
          />
     </FrameLayout>
 
