--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
@@ -31,27 +31,32 @@
                 android:id="@+id/profileBack"
                 android:layout_width="140px"
                 android:layout_height="140px"
-                android:background="@drawable/circle_orange"
+                android:background="@drawable/circle_white"
                 android:tag="mwar"/>
 
             <ImageView
                 android:id="@+id/profileImg"
                 android:layout_width="134px"
                 android:layout_height="134px"
-                android:src="@drawable/auto_icon_front_new"
+                android:src="@drawable/ic_auto_request"
                 android:layout_centerInParent="true"
                 android:tag="mwar"/>
         </RelativeLayout>
-
+        <RelativeLayout
+            android:id="@+id/rlRemoveVehicle"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            >
         <ImageView
             android:id="@+id/ivDelete"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
             android:src="@drawable/ic_delete"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
             />
+        </RelativeLayout>
         <LinearLayout
             android:gravity="center_vertical"
             android:layout_marginStart="20dp"
@@ -59,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toEndOf="@id/profileRl"
-            android:layout_toStartOf="@id/ivDelete"
+            android:layout_toStartOf="@id/rlRemoveVehicle"
             android:orientation="vertical"
             >
             <TextView
