--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
@@ -29,6 +29,13 @@
 
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:background="@color/grey_light_boarder"
+        android:layout_alignBottom="@id/topBar"
+        />
+
 
     <LinearLayout
         android:id="@+id/linearLayoutMain"
