--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout
     android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,6 +18,9 @@
             android:id="@+id/textViewEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:scrollHorizontally="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10px"
