--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -6,6 +6,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     android:background="@color/colorPrimary"
     android:splitMotionEvents="false"
     android:tag="@string/dont_touch_me"
