--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
@@ -13,6 +13,7 @@
     <RelativeLayout
         android:id="@+id/border"
         android:layout_width="match_parent"
+        android:background="?attr/selectableItemBackground"
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_alignParentStart="true"
