--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_vehicle_details.xml
@@ -7,8 +7,7 @@
     tools:context=".VehicleDetailsActivity">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -27,11 +26,9 @@
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/title"
             style="@style/TextTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_toEndOf="@id/backBtn"
-            android:layout_toStartOf="@id/ivAddDestRide"
             android:gravity="center"
             android:maxHeight="45dp"
             android:textAllCaps="true"
