--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_vehicle_details.xml
@@ -68,19 +68,39 @@
             android:layout_toStartOf="@id/rlRemoveVehicle"
             android:orientation="vertical"
             >
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tvVehicleName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hyundai, i10"
+                android:layout_centerVertical="true"
                 android:fontFamily="@font/maven_pro_medium"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:gravity="center_vertical"
                 android:layout_marginBottom="8dp"
-
+                android:layout_toStartOf="@id/tvVehicleType"
                 />
+                <TextView
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/tvVehicleType"
+                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="AUTOS"
+                    android:fontFamily="@font/maven_pro_medium"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:textColor="@color/black"
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="8dp"
+                    />
+            </RelativeLayout>
             <TextView
                 android:layout_marginBottom="8dp"
                 android:id="@+id/tvVehicleDetails"
@@ -101,10 +121,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/rejected"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/maven_pro_medium"
 
                 />
+            <TextView
+                android:textSize="14sp"
+                android:id="@+id/tvVehicleRejectReason"
+                android:textColor="@color/red_dark"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:visibility="gone"
+                android:fontFamily="@font/maven_pro_medium"
 
+                />
 
         </LinearLayout>
 
