--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts_operations.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_emergency_contacts_operations.xml
@@ -32,7 +32,16 @@
             android:textSize="@dimen/text_size_28"
             />
 
+
     </RelativeLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2.5dp"
+        android:background="@color/grey_light_boarder"
+        android:layout_below="@+id/topBar"
+        />
 
     <LinearLayout
         android:id="@+id/linearLayoutMain"
