--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -188,7 +188,7 @@
             android:layout_width="match_parent"
             android:clipToPadding="false"
             android:padding="@dimen/spacing_grid_recycler_view"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
@@ -318,7 +318,7 @@
             android:text="@string/by_signing_you_agree"
             android:textColor="@color/text_color_splash_heading"
             android:textSize="14sp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/bContinue"
             />
         <android.support.constraint.Group
@@ -333,7 +333,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
-            app:constraint_referenced_ids="tvEnterName,editTextName,edtLastName,tvSelectVehicle,bContinue,bCancel,tvCities,tvTermsOfUse"/>
+            app:constraint_referenced_ids="tvEnterName,editTextName,edtLastName,tvSelectVehicle,bContinue,bCancel,tvCities"/>
         <android.support.constraint.Group
             android:id="@+id/groupDetails"
             android:layout_width="match_parent"
@@ -341,16 +341,10 @@
             android:visibility="visible"
             app:constraint_referenced_ids="tvEnterName,editTextName,edtLastName,tvSelectFleet,tvFleetSelected,tvPromo,edtPromo"/>
         <android.support.constraint.Group
-            android:id="@+id/vehicleTypeGroup"
+            android:id="@+id/selectCityGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="tvSelectVehicle,tvCities,rvVehicleTypes"/>
-        <android.support.constraint.Group
-            android:id="@+id/selectVehicleGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             app:constraint_referenced_ids="tvSelectVehicle,tvCities"/>
 
         <android.support.constraint.Group
