--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -187,7 +187,10 @@
             android:id="@+id/rvVehicleTypes"
             android:layout_width="match_parent"
             android:clipToPadding="false"
-            android:padding="@dimen/spacing_grid_recycler_view"
+            android:paddingTop="@dimen/spacing_grid_recycler_view"
+            android:paddingBottom="@dimen/spacing_grid_recycler_view"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:visibility="invisible"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
