--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -576,6 +576,8 @@
                 <RatingBar
                     android:id="@+id/ratingBarFeedback"
                     style="@style/RatingBarBlue"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32px"
