set location on map integrated

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
@@ -27,8 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_toStartOf="@id/ivAddDestRide"
-            android:layout_toEndOf="@+id/backBtn"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
             android:maxHeight="45dp"
             android:text="@string/dest_trip"
