--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_destinstion_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_destinstion_ride.xml
@@ -82,7 +82,7 @@
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/background_tranparend_red_v2_selector"
+            android:background="@drawable/background_white_rounded_orange_bordered"
             >
 
             <RelativeLayout
@@ -96,7 +96,7 @@
                     android:layout_height="12dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="3dp"
-                    android:src="@drawable/radio_unslelcet" />
+                    android:src="@drawable/radio_select" />
             </RelativeLayout>
 
             <TextView
@@ -118,7 +118,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/background_tranparend_red_v2_selector"
+            android:background="@drawable/background_white_rounded_orange_bordered"
             >
 
             <RelativeLayout
@@ -154,7 +154,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/background_tranparend_red_v2_selector"
+            android:background="@drawable/background_white_rounded_orange_bordered"
             >
 
 
