--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_destinstion_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_destinstion_ride.xml
@@ -96,7 +96,7 @@
                     android:layout_height="12dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="3dp"
-                    android:src="@drawable/radio_select" />
+                    android:src="@drawable/radio_unslelcet" />
             </RelativeLayout>
 
             <TextView
