--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -332,8 +332,19 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="20px"
+                    android:visibility="gone"
                     android:src="@drawable/toggle_on_v2"
                     android:tag="mwar"/>
+                <TextView
+                    android:id="@+id/destRideStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/destRidesText"
+                    android:layout_marginStart="15px"
+                    android:text="ON"
+                    android:textColor="@color/white"
+                    android:textSize="36px"/>
 
             </RelativeLayout>
 
