wl_luckyu: cash to be collected string handled in screen engaged and deliver; Tag type in vehicle decoupling removed as per client, Drop icon UI fixed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -434,6 +434,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="18px"
                                 android:maxLines="4"
+                                android:visibility="gone"
                                 android:drawablePadding="15px"
                                 android:drawableStart="@drawable/ic_circle_red"
                                 android:textSize="28px"
