--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -325,19 +325,19 @@
 
                         <TextView
                             android:id="@+id/textViewCustomerName"
-                            android:layout_width="430px"
-                            android:layout_alignParentStart="true"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="30px"
-                            android:ellipsize="end"
+                            android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
+                            android:layout_marginStart="30px"
+                            android:layout_marginEnd="49dp"
+                            android:layout_toStartOf="@+id/rvPickupFeedImages"
+                            android:ellipsize="end"
                             android:singleLine="true"
                             android:text="@string/NA"
-                            android:textSize="40px"
-                            android:visibility="visible"
                             android:textColor="@color/black_text_v2"
-                            android:layout_toStartOf="@+id/rvPickupFeedImages"
-                            />
+                            android:textSize="15sp"
+                            android:visibility="visible" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rvPickupFeedImages"
