--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -42,15 +42,17 @@
 
                 <TextView
                     android:id="@+id/textViewCustomerName"
-                    android:layout_width="410px"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewListCount"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="30px"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:text="@string/NA"
                     android:textColor="@color/black_text_v2"
                     android:textSize="32px"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/textViewReturnText"
