--- a/JugnooNewDriver/jugnooNewDriver/src/taxiye/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/taxiye/res/values/values-wl.xml
@@ -40,7 +40,7 @@
 
     <!--Notifications-->
 
-    <drawable name="ic_notification_small_drawable">@drawable/ic_notification_icon</drawable>
+    <drawable name="ic_notification_small_drawable">@drawable/app_icon</drawable>
     <drawable name="floating_icon_drawable">@drawable/app_icon</drawable><!--App Floating Service Icon, preferably circular-->
     <drawable name="ic_notification_placeholder_drawable">@drawable/ic_notification_placeholder</drawable><!--680 * 340 px-->
 
